Added Sam's code, increased terminal font size and minor edits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "python.linting.flake8Args": [
         "--ignore=E501,C901"
     ],
-    "python.pythonPath": "C:\\Users\\cmcoo\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+    "python.pythonPath": "C:\\Users\\cmcoo\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
+    "terminal.integrated.fontSize": 24
 }
